<resources>
    <string name="app_name">A Throw of the Dice</string>
    <string name="Team_A">Team A</string>
    <string name="Team_B">Team B</string>
    <string name="Current_score">0</string>
    <string name="Free_throw">Free throw</string>
    <string name="two_pointer">+2 points</string>
    <string name="three_pointer">+3 points</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="d2">d2</string>
    <string name="reset">Reset</string>
    <string name="rollText">You rolled</string>
    <string name="easterToast">Un coup de dés jamais n’abolira le hasard</string>
</resources>
